# focus

./: .gitignore  README.md  clean.js  electron-builder.json5  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: main.yml
electron/main/: index.ts
electron/main/model/: EditorExtraFeatures.ts  LexicalNodes.ts
electron/main/modules/: FileSystemModule.ts  HtmlToPDF.ts  ManageConfig.ts  MarkdownConversionModule.ts  NotificationModule.ts  OutputModule.ts  VaultManagementModule.ts  WindowsManagement.ts
electron/main/modules/editorExtraFeaturesManagementModule/: RestoreEditorExtraFeatures.ts  (+1 more)
electron/preload/: index.ts
modules/: package.json
modules/pathManage/: package.json
modules/pathManage/lib/: pathManage.ts
modules/themeTypes/: package.json  tsconfig.json
modules/themeTypes/lib/: ThemeType.ts
src/: App.tsx  VaultManager.tsx  VaultManagerCreateVault.tsx  main.tsx
src/assets/styles/: app.module.scss  dropdown.module.scss  editor.module.scss  editor.toolbar.module.scss  index.scss  menubar.module.scss  sidebar.module.scss  variables.scss  vaultManager.module.scss
src/components/editor/: ButtonEditor.tsx  Editor.tsx  NoteTitleBar.tsx  Toolbar.tsx
src/components/generic/: Dropdown.tsx  Loader.tsx  NotificationInfo.tsx
src/config/editor/: editorConfig.js  editorConfig.ts
src/context/: NotificationContext.tsx  selectedFilesContext.tsx
wasm_lib/: Cargo.toml  build.sh  indent.json  test.md
wasm_lib/src/: indent.json  lib.rs  tests.rs
wasm_lib/src/tests/: json_data.rs
(+54 files in other folders)
