[package]
name = "focus_lib"
version = "0.1.0"
authors = ["ObNitram <mart1.guillemot@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
